--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/svg" href="assets/img/logo-title.svg">
     <title>Olivia Green</title>
 </head>
 
