--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
                 title="Instagram"></i>
         </a>
     </div>
+
     <div class="page-wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <a class="navbar-brand mx-5" href="#"><img src="assets/img/Group 12.svg" width="60"></a>
+                <a class="navbar-brand mx-5" href="#">Citra</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -57,20 +58,19 @@
                     <div class="navbar-nav">
                         <a class="nav-link me-5" href="#home">Home</a>
                         <a class="nav-link me-5" href="#portfolios">Portfolio</a>
-                        <a class="navbar-brand navbar-logo me-5" href="#home"><img src="assets/img/Group 12.svg" width="49"></a>
+                        <a class="navbar-brand navbar-logo me-5" href="#home">Citra</a>
                         <a class="nav-link me-5" href="#services">Services</a>
                         <a class="nav-link" href="#experiences">Experiences</a>
                     </div>
                 </div>
         </nav>
+
         <div class="container">
             <div id="home" class="row hero">
                 <div class="col-lg-5 col-md-12 hero-img">
-                    <!-- <div class=""> -->
                     <div class="text-center">
                         <img src="assets/img/profile.jpg" class="img-fluid">
                     </div>
-                    <!-- </div> -->
                 </div>
                 <div class="col-lg-6 col-md-12 hero-headline pt-5">
                     <h1 class="display-5 mt-5 mb-4 fw-bold title">Olivia <span>Green</span></h1>
@@ -81,18 +81,59 @@
                         molestias repellat ipsum corrupti ipsa unde quisquam reiciendis aliquam architecto magni, sunt
                         quae
                         distinctio aperiam sapiente?</p>
-                    <!-- <div class="row mt-3 hero-info">
-                        <div class="col-6">
-                            <ul>
-                                <li>Jakarta, 4st September 2003</li>
-                                <li></li>
-                            </ul>
-                        </div>
-                        <div class="col-6"></div>
-                    </div> -->
                     <div class="btn fw-bold mt-3">Hire me</div>
                 </div>
             </div>
+
+            <div id="services" class="row section services">
+                <h2 class="title mb-4 fw-bold">My<span> Services</span></h2>
+                <div class="col-lg-5 col-md-12 pe-5 pt-3">
+                    <div class="service">
+                        <h4 class="small">UI/UX Design <span class="float-end">90%</span></h4>
+                        <div class="progress mb-3">
+                            <div class="progress-bar" role="progressbar" style="width:80%" aria-valuenow="80"
+                                aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <h4 class="small">Frontend Development <span class="float-end">85%</span></h4>
+                        <div class="progress mb-3">
+                            <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85"
+                                aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <h4 class="small">Backend Development <span class="float-end">70%</span></h4>
+                        <div class="progress mb-3">
+                            <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70"
+                                aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <h4 class="small">Backend Development <span class="float-end">70%</span></h4>
+                        <div class="progress mb-3">
+                            <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70"
+                                aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-7 col-md-12 mt-3">
+                    <h3>I use cutting edge technology</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio explicabo odit odio mollitia, nam
+                        rerum distinctio. Et ipsam repudiandae ad tenetur cumque non praesentium! Sed molestias ex fugit
+                        debitis esse. </p>
+                    <div class="tech my-4">
+                        <i class='bx bxl-html5 display-3 me-3'></i>
+                        <i class='bx bxl-css3 display-3 me-3'></i>
+                        <i class='bx bxl-sass display-3 me-3'></i>
+                        <i class='bx bxl-bootstrap display-3 me-3'></i>
+                        <i class='bx bxl-javascript display-3 me-3'></i>
+                        <i class='bx bxl-php display-3 me-3'></i>
+                        <i class="fab fa-laravel display-3 me-3"></i>
+                    </div>
+                </div>
+            </div>
+
             <div id="portfolios" class="row section portfolios">
                 <h2 class="title mb-4 fw-bold">My<span> Projects</span></h2>
                 <div class="carousel-wrap">
@@ -197,56 +238,7 @@
                     </div>
                 </div>
             </div>
-            <div id="services" class="row section services">
-                <h2 class="title mb-4 fw-bold">My<span> Services</span></h2>
-                <div class="col-lg-5 col-md-12 pe-5 pt-3">
-                    <div class="service">
-                        <h4 class="small">UI/UX Design <span class="float-end">90%</span></h4>
-                        <div class="progress mb-3">
-                            <div class="progress-bar" role="progressbar" style="width:80%" aria-valuenow="80"
-                                aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="service">
-                        <h4 class="small">Frontend Development <span class="float-end">85%</span></h4>
-                        <div class="progress mb-3">
-                            <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85"
-                                aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="service">
-                        <h4 class="small">Backend Development <span class="float-end">70%</span></h4>
-                        <div class="progress mb-3">
-                            <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70"
-                                aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="service">
-                        <h4 class="small">Backend Development <span class="float-end">70%</span></h4>
-                        <div class="progress mb-3">
-                            <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70"
-                                aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-7 col-md-12 mt-3">
-                    <h3>I use cutting edge technology</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio explicabo odit odio mollitia, nam
-                        rerum distinctio. Et ipsam repudiandae ad tenetur cumque non praesentium! Sed molestias ex fugit
-                        debitis esse. </p>
-                    <div class="tech my-4">
-                        <i class='bx bxl-html5 display-3 me-3'></i>
-                        <i class='bx bxl-css3 display-3 me-3'></i>
-                        <i class='bx bxl-sass display-3 me-3'></i>
-                        <i class='bx bxl-bootstrap display-3 me-3'></i>
-                        <i class='bx bxl-javascript display-3 me-3'></i>
-                        <i class='bx bxl-php display-3 me-3'></i>
-                        <i class="fab fa-laravel display-4 me-3"></i>
-                    </div>
-                    <!-- <div class="tech mb-3">
-                    </div> -->
-                </div>
-            </div>
+
             <div id="experiences" class="experiences row section">
                 <h2 class="title mb-4 fw-bold">My<span> Experiences</span></h2>
                 <div class="col-lg-5 col-md-12">
@@ -274,7 +266,8 @@
                                     </span>
                                     <span class="year">| July 2021</span>
                                 </h6>
-                                Here, I learned about the different ways developers adapt a site to different screen sizes, how to design pages to be responsive and modern, and many more.
+                                Here, I learned about the different ways developers adapt a site to different screen sizes, how to design pages to be responsive and modern, and
+                                many more.
                             </li>
                             <li class="StepProgress-item">
                                 <h6 class="experience-title">Take writing training -
@@ -289,7 +282,7 @@
                                 <h6 class="experience-title">Company visit -
                                     <span class="place">
                                         <a href="https://www.code.id/">PT. Code Development Indonesia</a></span>
-                                    <span class="year">| November 2019</span>
+                                            <span class="year">| November 2019</span>
                                 </h6>
                                 On this occasion, my friends and I were invited to tour the CODE.ID workspace and get the opportunity to share the world of work in the IT industry with several CODE.ID employees.
                             </li>
@@ -300,41 +293,41 @@
                                     </span>
                                     <span class="year">| November 2021 - April 2022</span>
                                 </h6>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda praesentium ipsam repudiandae, nihil recusandae harum enim odio quae ullam, quasi laboriosam consectetur!
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda praesentium ipsam repudiandae, nihil recusandae harum enim odio quae ullam quasi laboriosam consectetur!
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
+
         <footer class="text-center py-5">
-                    <div class="social mb-3">
-                        <a href="" class="social-link text-decoration-none">
-                            <i class='bx bxs-phone bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left"
-                                title="Phone"></i>
-                        </a>
-                        <a href="" class="social-link text-decoration-none">
-                            <i class='bx bxs-envelope bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left"
-                                title="Email"></i>
-                        </a>
-                        <a href="" class="social-link text-decoration-none">
-                            <i class='bx bxl-github bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left"
-                                title="Github"></i>
-                        </a>
-                        <a href="" class="social-link text-decoration-none">
-                            <i class='bx bxl-instagram bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left"
-                                title="Instagram"></i>
-                        </a>
-                    </div>
-                    <h1>someone@example.com</h1>
-                    <div class="menu mt-4">
-                        <a class="nav-link d-inline" href="#">Home</a>
-                        <a class="nav-link d-inline" href="#">Home</a>
-                        <a class="nav-link d-inline" href="#">Features</a>
-                        <a class="nav-link d-inline" href="#">Pricing</a>
-                    </div>
+            <div class="social mb-3">
+                <a href="" class="social-link text-decoration-none">
+                    <i class='bx bxs-phone bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left" title="Phone"></i>
+                </a>
+                <a href="" class="social-link text-decoration-none">
+                    <i class='bx bxs-envelope bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left" title="Email"></i>
+                </a>
+                <a href="" class="social-link text-decoration-none">
+                    <i class='bx bxl-github bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left" title="Github"></i>
+                </a>
+                <a href="" class="social-link text-decoration-none">
+                    <i class='bx bxl-instagram bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left" title="Instagram"></i>
+                </a>
+            </div>
+            <h1>someone@example.com</h1>
+            <div class="menu mt-4">
+                <a class="nav-link d-inline" href="#">Home</a>
+                <a class="nav-link d-inline" href="#">Home</a>
+                <a class="nav-link d-inline" href="#">Features</a>
+                <a class="nav-link d-inline" href="#">Pricing</a>
+            </div>
         </footer>
-        <button onclick="topFunction()" id="scrollToTop" title="Go to top"><i class='bx bx-up-arrow-alt'></i></button>
+
+        <button onclick="topFunction()" id="scrollToTop" title="Go to top">
+            <i class='bx bx-up-arrow-alt'></i>
+        </button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
@@ -365,7 +358,7 @@
             }
         })
 
-        //Get the button:
+        // SCROLL TO TOP //
         mybutton = document.getElementById("scrollToTop");
 
         // When the user scrolls down 20px from the top of the document, show the button
@@ -382,11 +375,10 @@
         }
 
         // When the user clicks on the button, scroll to the top of the document
-            function topFunction() {
-                document.body.scrollTop = 0; // For Safari
-                document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-            }
+        function topFunction() {
+            document.body.scrollTop = 0; // For Safari
+            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+        }
     </script>
 </body>
-
 </html>
