change footer color, set new breakpoint to 812px, change menu order

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 <body>
     <div class="sidebar shadow-sm py-3 px-2">
-        <a href="" class="text-decoration-none">
+        <a href="tel:089663192793" class="text-decoration-none">
             <i class='bx bxs-phone bx-md d-block mb-3' data-bs-toggle="tooltip" data-bs-placement="left"
                 title="Phone"></i>
         </a>
-        <a href="" class="text-decoration-none">
+        <a href="mailto:wecitra49@gmail.com" class="text-decoration-none">
             <i class='bx bxs-envelope bx-md d-block mb-3' data-bs-toggle="tooltip" data-bs-placement="left"
                 title="Email"></i>
         </a>
@@ -48,7 +48,7 @@
     <div class="page-wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <a class="navbar-brand mx-5" href="#">Citra</a>
+                <a class="navbar-brand mx-5" href="#">olivia</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -57,9 +57,9 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link me-5" href="#home">Home</a>
-                        <a class="nav-link me-5" href="#portfolios">Portfolio</a>
-                        <a class="navbar-brand navbar-logo me-5" href="#home">Citra</a>
                         <a class="nav-link me-5" href="#services">Services</a>
+                        <a class="navbar-brand navbar-logo me-5" href="#home">Olivia</a>
+                        <a class="nav-link me-5" href="#projects">Projects</a>
                         <a class="nav-link" href="#experiences">Experiences</a>
                     </div>
                 </div>
@@ -74,14 +74,8 @@
                 </div>
                 <div class="col-lg-6 col-md-12 hero-headline pt-5">
                     <h1 class="display-5 mt-5 mb-4 fw-bold title">Olivia <span>Green</span></h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consequuntur voluptatibus quisquam
-                        vero
-                        impedit, nostrum fugiat deleniti. Voluptatibus officia eligendi iure facere est illum impedit
-                        suscipit
-                        molestias repellat ipsum corrupti ipsa unde quisquam reiciendis aliquam architecto magni, sunt
-                        quae
-                        distinctio aperiam sapiente?</p>
-                    <div class="btn fw-bold mt-3">Hire me</div>
+                    <p>Olivia is fueled by her passion for understanding the nuances of IT. She considers herself a 'forever student,' eager to both build on her academic foundations in IT through continued coursework and professional development.</p>
+                        <a href="mailto:wecitra49@gmail.com" class="btn fw-bold mt-3">Hire me</a>
                 </div>
             </div>
 
@@ -110,7 +104,7 @@
                         </div>
                     </div>
                     <div class="service">
-                        <h4 class="small">Backend Development <span class="float-end">70%</span></h4>
+                        <h4 class="small">Quality Control <span class="float-end">70%</span></h4>
                         <div class="progress mb-3">
                             <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70"
                                 aria-valuemin="0" aria-valuemax="100"></div>
@@ -123,18 +117,18 @@
                         rerum distinctio. Et ipsam repudiandae ad tenetur cumque non praesentium! Sed molestias ex fugit
                         debitis esse. </p>
                     <div class="tech my-4">
-                        <i class='bx bxl-html5 display-3 me-3'></i>
-                        <i class='bx bxl-css3 display-3 me-3'></i>
-                        <i class='bx bxl-sass display-3 me-3'></i>
-                        <i class='bx bxl-bootstrap display-3 me-3'></i>
-                        <i class='bx bxl-javascript display-3 me-3'></i>
-                        <i class='bx bxl-php display-3 me-3'></i>
-                        <i class="fab fa-laravel display-3 me-3"></i>
+                        <i class='bx bxl-html5 display-3 me-2'></i>
+                        <i class='bx bxl-css3 display-3 me-2'></i>
+                        <i class='bx bxl-sass display-3 me-2'></i>
+                        <i class='bx bxl-bootstrap display-3 me-2'></i>
+                        <i class='bx bxl-javascript display-3 me-2'></i>
+                        <i class='bx bxl-php display-3 me-2'></i>
+                        <i class="fab fa-laravel display-3 me-2"></i>
                     </div>
                 </div>
             </div>
 
-            <div id="portfolios" class="row section portfolios">
+            <div id="projects" class="row section portfolios">
                 <h2 class="title mb-4 fw-bold">My<span> Projects</span></h2>
                 <div class="carousel-wrap">
                     <div class="owl-carousel">
@@ -291,7 +285,7 @@
                                     <span class="place">
                                         <a href="https://www.freecodecamp.org/certification/citracoz/responsive-web-design">PT. Ciptadra Softindo</a>
                                     </span>
-                                    <span class="year">| November 2021 - April 2022</span>
+                                    <span class="year">| November 2021 - present</span>
                                 </h6>
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda praesentium ipsam repudiandae, nihil recusandae harum enim odio quae ullam quasi laboriosam consectetur!
                             </li>
@@ -303,10 +297,10 @@
 
         <footer class="text-center py-5">
             <div class="social mb-3">
-                <a href="" class="social-link text-decoration-none">
+                <a href="tel:08966319793" class="social-link text-decoration-none">
                     <i class='bx bxs-phone bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left" title="Phone"></i>
                 </a>
-                <a href="" class="social-link text-decoration-none">
+                <a href="mailto:olivia@gmail.com" class="social-link text-decoration-none">
                     <i class='bx bxs-envelope bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left" title="Email"></i>
                 </a>
                 <a href="" class="social-link text-decoration-none">
@@ -316,12 +310,12 @@
                     <i class='bx bxl-instagram bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left" title="Instagram"></i>
                 </a>
             </div>
-            <h1>someone@example.com</h1>
+            <h1>olivia@gmail.com</h1>
             <div class="menu mt-4">
-                <a class="nav-link d-inline" href="#">Home</a>
-                <a class="nav-link d-inline" href="#">Home</a>
-                <a class="nav-link d-inline" href="#">Features</a>
-                <a class="nav-link d-inline" href="#">Pricing</a>
+                <a class="nav-link d-inline" href="#home">Home</a>
+                <a class="nav-link d-inline" href="#services">Services</a>
+                <a class="nav-link d-inline" href="#projects">Projects</a>
+                <a class="nav-link d-inline" href="#experiences">Experiences</a>
             </div>
         </footer>
 
