add new color variable, change StepProgress class, remove unused css

--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
                 </div>
                 <div class="col-lg-7 col-md-12">
                     <div class="wrapper">
-                        <ul class="StepProgress">
-                            <li class="StepProgress-item">
+                        <ul class="stepprogress">
+                            <li class="stepprogress-item">
                                 <h6 class="experience-title">Got certificate for responsive web design -
                                     <span class="place">
                                         <a href="https://www.freecodecamp.org/certification/citracoz/responsive-web-design">Freecodecamp</a>
@@ -263,7 +263,7 @@
                                 Here, I learned about the different ways developers adapt a site to different screen sizes, how to design pages to be responsive and modern, and
                                 many more.
                             </li>
-                            <li class="StepProgress-item">
+                            <li class="stepprogress-item">
                                 <h6 class="experience-title">Take writing training -
                                     <span class="place">
                                         <a href="https://www.instagram.com/letsfixlitclub/">Let's Fix Literature Club</a>
@@ -272,7 +272,7 @@
                                 </h6>
                                 In this class, I learned how to develop good use of literature, use the correct language rules, how to place the right genre of fiction, and much more.
                             </li>
-                            <li class="StepProgress-item">
+                            <li class="stepprogress-item">
                                 <h6 class="experience-title">Company visit -
                                     <span class="place">
                                         <a href="https://www.code.id/">PT. Code Development Indonesia</a></span>
@@ -280,7 +280,7 @@
                                 </h6>
                                 On this occasion, my friends and I were invited to tour the CODE.ID workspace and get the opportunity to share the world of work in the IT industry with several CODE.ID employees.
                             </li>
-                            <li class="StepProgress-item">
+                            <li class="stepprogress-item">
                                 <h6 class="experience-title">Intern -
                                     <span class="place">
                                         <a href="https://www.freecodecamp.org/certification/citracoz/responsive-web-design">PT. Ciptadra Softindo</a>
