--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/svg" href="assets/img/logo-title.svg">
-    <title>Olivia Green</title>
+    <title>Olivia Jensen</title>
 </head>
 
 <body>
     <div class="sidebar shadow-sm py-3 px-2">
-        <a href="tel:089663192793" class="text-decoration-none">
+        <a href="" class="text-decoration-none">
             <i class='bx bxs-phone bx-md d-block mb-3' data-bs-toggle="tooltip" data-bs-placement="left"
                 title="Phone"></i>
         </a>
-        <a href="mailto:wecitra49@gmail.com" class="text-decoration-none">
+        <a href="" class="text-decoration-none">
             <i class='bx bxs-envelope bx-md d-block mb-3' data-bs-toggle="tooltip" data-bs-placement="left"
                 title="Email"></i>
         </a>
@@ -48,7 +48,7 @@
     <div class="page-wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <a class="navbar-brand mx-5" href="#">olivia</a>
+                <a class="navbar-brand mx-5" href="#">Olivia</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -73,9 +73,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 hero-headline pt-5">
-                    <h1 class="display-5 mt-5 mb-4 fw-bold title">Olivia <span>Green</span></h1>
-                    <p>Olivia is fueled by her passion for understanding the nuances of IT. She considers herself a 'forever student,' eager to both build on her academic foundations in IT through continued coursework and professional development.</p>
-                        <a href="mailto:wecitra49@gmail.com" class="btn fw-bold mt-3">Hire me</a>
+                    <h1 class="display-5 mt-5 mb-4 fw-bold title">Olivia <span>Jensen</span></h1>
+                    <p>Web Developer with 5+ years of experience in designing and developing user interfaces, testing, debugging and training staff within e-Commerce technologies. Proven ability in optimizing web functionalities that improve data retrieval and workflow efficiencies.</p>
+                        <a href="" class="btn fw-bold mt-3">Hire me</a>
                 </div>
             </div>
 
@@ -134,7 +134,7 @@
                     <div class="owl-carousel">
                         <div class="card item border-0">
                             <div class="card-img"
-                                style="background-image:url(https://www.nicepng.com/png/detail/65-653197_banner-black-and-white-dnr-turkish-restaurant-lemon.png);">
+                                style="background-image:url('assets/img/project_1.png');">
                             </div>
 
                             <div class="card-content">
@@ -148,7 +148,7 @@
 
                         <div class="card item border-0">
                             <div class="card-img"
-                                style="background-image:url(https://png.pngtree.com/thumb_back/fh260/back_our/20190623/ourmid/pngtree-lemon-slice-fresh-art-summer-banner-background-image_251082.jpg);">
+                                style="background-image:url('assets/img/project_2.png');">
                             </div>
 
                             <div class="card-content">
@@ -238,15 +238,21 @@
                 <div class="col-lg-5 col-md-12">
                     <div class="education mb-3 border-bottom">
                         <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1 experience-title">Taruna Bhakti Vocational School</h5>
+                            <h5 class="mb-1 experience-title">Jakarta University</h5>
                             <small>2019 - present</small>
                         </div>
                         <p class="">Majoring in Software Engineer</p>
                     </div>
-                    <div class="education pb-2 border-bottom">
+                    <div class="education mb-3 pb-2 border-bottom">
                         <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1 experience-title"">8 Depok Junior High School</h5>
+                            <h5 class="mb-1 experience-title"">Wild Cats Senior High School</h5>
                             <small>2016 - 2019</small>
+                        </div>
+                    </div>
+                    <div class="education mb-3 pb-2 border-bottom">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1 experience-title"">Certified Web Programmer</h5>
+                            <small>2016</small>
                         </div>
                     </div>
                 </div>
@@ -254,40 +260,31 @@
                     <div class="wrapper">
                         <ul class="stepprogress">
                             <li class="stepprogress-item">
-                                <h6 class="experience-title">Got certificate for responsive web design -
+                                <h6 class="experience-title">Web Developer -
                                     <span class="place">
-                                        <a href="https://www.freecodecamp.org/certification/citracoz/responsive-web-design">Freecodecamp</a>
+                                        <a href="https://www.freecodecamp.org/certification/citracoz/responsive-web-design">Grooming Tech</a>
                                     </span>
-                                    <span class="year">| July 2021</span>
+                                    <span class="year">| July 2021 - present</span>
                                 </h6>
-                                Here, I learned about the different ways developers adapt a site to different screen sizes, how to design pages to be responsive and modern, and
-                                many more.
+                                Designed and developed user-friendly website, including optimized check-out page that increased user clicks, and subsequently customer purchases by 20%.
                             </li>
                             <li class="stepprogress-item">
-                                <h6 class="experience-title">Take writing training -
+                                <h6 class="experience-title">Web Developer -
                                     <span class="place">
-                                        <a href="https://www.instagram.com/letsfixlitclub/">Let's Fix Literature Club</a>
+                                        <a href="https://www.instagram.com/letsfixlitclub/">Focus Solutions</a>
                                     </span>
-                                    <span class="year">| January - May 2021</span>
+                                    <span class="year">| November 2021</span>
                                 </h6>
-                                In this class, I learned how to develop good use of literature, use the correct language rules, how to place the right genre of fiction, and much more.
+                                Developed dynamic and interactive website that ensured high traffic, page views, and user experience, resulting in 40% increase in sales revenue.
                             </li>
                             <li class="stepprogress-item">
-                                <h6 class="experience-title">Company visit -
+                                <h6 class="experience-title">Web Developer -
                                     <span class="place">
-                                        <a href="https://www.code.id/">PT. Code Development Indonesia</a></span>
-                                            <span class="year">| November 2019</span>
-                                </h6>
-                                On this occasion, my friends and I were invited to tour the CODE.ID workspace and get the opportunity to share the world of work in the IT industry with several CODE.ID employees.
-                            </li>
-                            <li class="stepprogress-item">
-                                <h6 class="experience-title">Intern -
-                                    <span class="place">
-                                        <a href="https://www.freecodecamp.org/certification/citracoz/responsive-web-design">PT. Ciptadra Softindo</a>
+                                        <a href="https://www.instagram.com/letsfixlitclub/">Area Communications</a>
                                     </span>
-                                    <span class="year">| November 2021 - present</span>
+                                    <span class="year">| January - October 2021</span>
                                 </h6>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda praesentium ipsam repudiandae, nihil recusandae harum enim odio quae ullam quasi laboriosam consectetur!
+                                Designed and maintained both corporate and client websites, using scripting languages and content management systems.
                             </li>
                         </ul>
                     </div>
@@ -297,10 +294,10 @@
 
         <footer class="text-center py-5">
             <div class="social mb-3">
-                <a href="tel:08966319793" class="social-link text-decoration-none">
+                <a href="" class="social-link text-decoration-none">
                     <i class='bx bxs-phone bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left" title="Phone"></i>
                 </a>
-                <a href="mailto:olivia@gmail.com" class="social-link text-decoration-none">
+                <a href="" class="social-link text-decoration-none">
                     <i class='bx bxs-envelope bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left" title="Email"></i>
                 </a>
                 <a href="" class="social-link text-decoration-none">
