change photo project from lemon to pink

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="owl-carousel">
                         <div class="card item border-0">
                             <div class="card-img"
-                                style="background-image:url('assets/img/project_1.png');">
+                                style="background-image:url(https://media.istockphoto.com/photos/sky-cloud-pink-love-sweet-love-color-tone-for-wedding-card-background-picture-id1180184210?b=1&k=20&m=1180184210&s=170667a&w=0&h=VbjitLKrB72EUtTfxE2ZoSi9IUINHijByKRYZsPw_hc=);">
                             </div>
 
                             <div class="card-content">
@@ -148,7 +148,7 @@
 
                         <div class="card item border-0">
                             <div class="card-img"
-                                style="background-image:url('assets/img/project_2.png');">
+                                style="background-image:url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v1013-p-0001a_2-ksi86qyf.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=4cfa446604e03dc918836b165b9d3242);">
                             </div>
 
                             <div class="card-content">
@@ -162,7 +162,7 @@
 
                         <div class="card item border-0">
                             <div class="card-img"
-                                style="background-image:url(https://png.pngtree.com/thumb_back/fw800/back_our/20190623/ourmid/pngtree-cartoon-fruit-lemon-slices-fresh-and-simple-banner-background-image_251707.jpg);">
+                                style="background-image:url(https://www.itl.cat/pngfile/big/147-1475229_pastel-wallpaper-plaid.jpg);">
                             </div>
 
                             <div class="card-content">
@@ -176,7 +176,7 @@
 
                         <div class="card item border-0">
                             <div class="card-img"
-                                style="background-image:url(https://www.ubuy.co.id/productimg/?image=aHR0cHM6Ly9tLm1lZGlhLWFtYXpvbi5jb20vaW1hZ2VzL0kvNTF1OUFBUlhlMkwuX0FDX1NMMTAwMF8uanBn.jpg);">
+                                style="background-image:url(https://image.freepik.com/free-vector/pink-organic-shape-background_53876-97811.jpg);">
                             </div>
 
                             <div class="card-content">
@@ -190,7 +190,7 @@
 
                         <div class="card item border-0">
                             <div class="card-img"
-                                style="background-image:url(https://png.pngtree.com/thumb_back/fh260/back_our/20190623/ourmid/pngtree-lemon-slice-fresh-art-summer-banner-background-image_251082.jpg);">
+                                style="background-image:url(https://i.ytimg.com/vi/5kfEk70f97U/maxresdefault.jpg;">
                             </div>
 
                             <div class="card-content">
@@ -204,7 +204,7 @@
 
                         <div class="card item border-0">
                             <div class="card-img"
-                                style="background-image:url(https://png.pngtree.com/thumb_back/fw800/back_our/20190623/ourmid/pngtree-cartoon-fruit-lemon-slices-fresh-and-simple-banner-background-image_251707.jpg);">
+                                style="background-image:url(https://thumbs.dreamstime.com/b/retro-alarm-clock-pink-retro-alarm-clock-pink-d-rendering-158149534.jpg;">
                             </div>
 
                             <div class="card-content">
@@ -215,20 +215,7 @@
                                 </a>
                             </div>
                         </div>
-
-                        <div class="card item border-0">
-                            <div class="card-img"
-                                style="background-image:url(https://www.ubuy.co.id/productimg/?image=aHR0cHM6Ly9tLm1lZGlhLWFtYXpvbi5jb20vaW1hZ2VzL0kvNTF1OUFBUlhlMkwuX0FDX1NMMTAwMF8uanBn.jpg);">
-                            </div>
-
-                            <div class="card-content">
-                                <a href="#!">
-                                    <h5>Title</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptates
-                                        minima perferendis, tempore ab ut.</p>
-                                </a>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
