--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    
     <!-- Box Icons -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <script defer src="assets/js/all.js"></script>
 
-    <!-- Owl Carousel -->
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/svg" href="assets/img/logo-title.svg">
+
     <title>Olivia Jensen</title>
 </head>
 
@@ -190,7 +186,7 @@
 
                         <div class="card item border-0">
                             <div class="card-img"
-                                style="background-image:url(https://i.ytimg.com/vi/5kfEk70f97U/maxresdefault.jpg;">
+                                style="background-image:url(https://i.ytimg.com/vi/5kfEk70f97U/maxresdefault.jpg);">
                             </div>
 
                             <div class="card-content">
@@ -204,7 +200,7 @@
 
                         <div class="card item border-0">
                             <div class="card-img"
-                                style="background-image:url(https://thumbs.dreamstime.com/b/retro-alarm-clock-pink-retro-alarm-clock-pink-d-rendering-158149534.jpg;">
+                                style="background-image:url(https://thumbs.dreamstime.com/b/retro-alarm-clock-pink-retro-alarm-clock-pink-d-rendering-158149534.jpg);">
                             </div>
 
                             <div class="card-content">
@@ -249,7 +245,7 @@
                             <li class="stepprogress-item">
                                 <h6 class="experience-title">Web Developer -
                                     <span class="place">
-                                        <a href="https://www.freecodecamp.org/certification/citracoz/responsive-web-design">Grooming Tech</a>
+                                        <a href="">Grooming Tech</a>
                                     </span>
                                     <span class="year">| July 2021 - present</span>
                                 </h6>
@@ -258,7 +254,7 @@
                             <li class="stepprogress-item">
                                 <h6 class="experience-title">Web Developer -
                                     <span class="place">
-                                        <a href="https://www.instagram.com/letsfixlitclub/">Focus Solutions</a>
+                                        <a href="">Focus Solutions</a>
                                     </span>
                                     <span class="year">| November 2021</span>
                                 </h6>
@@ -267,7 +263,7 @@
                             <li class="stepprogress-item">
                                 <h6 class="experience-title">Web Developer -
                                     <span class="place">
-                                        <a href="https://www.instagram.com/letsfixlitclub/">Area Communications</a>
+                                        <a href="">Area Communications</a>
                                     </span>
                                     <span class="year">| January - October 2021</span>
                                 </h6>
@@ -294,7 +290,7 @@
                     <i class='bx bxl-instagram bx-sm mx-3' data-bs-toggle="tooltip" data-bs-placement="left" title="Instagram"></i>
                 </a>
             </div>
-            <h1>olivia@gmail.com</h1>
+            <h1><a href="" class="text-decoration-none">olivia@gmail.com</a></h1>
             <div class="menu mt-4">
                 <a class="nav-link d-inline" href="#home">Home</a>
                 <a class="nav-link d-inline" href="#services">Services</a>
@@ -308,55 +304,10 @@
         </button>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
-
-    <!-- Owl Carousel -->
+    <!-- JavaScript -->
+    <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
-
-    <script>
-        $('.owl-carousel').owlCarousel({
-            loop: true,
-            margin: 10,
-            nav: true,
-            navText: ["<i class='bx bxs-chevron-left'></i>", "<i class='bx bxs-chevron-right' ></i>"],
-            autoplay: 3000,
-            autoplayHoverPause: true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 2
-                },
-                1000: {
-                    items: 4
-                }
-            }
-        })
-
-        // SCROLL TO TOP //
-        mybutton = document.getElementById("scrollToTop");
-
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function () {
-            scrollFunction()
-        };
-
-        function scrollFunction() {
-            if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
-                mybutton.style.display = "block";
-            } else {
-                mybutton.style.display = "none";
-            }
-        }
-
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-            document.body.scrollTop = 0; // For Safari
-            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-        }
-    </script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
