--- a/index.html
+++ b/index.html
@@ -2,21 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Hello there! Olivia Jensen is a designer UI/UX and web developer. Got a minute? Click on those blue words up there to get started.">
+    <meta name="keyword" content="olivia jensen, portfolio, designer, UI, UX, web developer, responsive web design services">
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    
-    <!-- Box Icons -->
-    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="assets/css/boxicons.css">
 
-    <!-- Font Awesome -->
-    <script defer src="assets/js/all.js"></script>
-
-    <link rel="icon" type="image/svg" href="assets/img/logo-title.svg">
+    <link rel="icon" type="image/png" href="assets/img/logo.png">
 
     <title>Olivia Jensen</title>
 </head>
@@ -81,7 +78,7 @@
                     <div class="service">
                         <h4 class="small">UI/UX Design <span class="float-end">90%</span></h4>
                         <div class="progress mb-3">
-                            <div class="progress-bar" role="progressbar" style="width:80%" aria-valuenow="80"
+                            <div class="progress-bar" role="progressbar" style="width:90%" aria-valuenow="90"
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
@@ -93,9 +90,9 @@
                         </div>
                     </div>
                     <div class="service">
-                        <h4 class="small">Backend Development <span class="float-end">70%</span></h4>
+                        <h4 class="small">Backend Development <span class="float-end">80%</span></h4>
                         <div class="progress mb-3">
-                            <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70"
+                            <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
@@ -109,9 +106,7 @@
                 </div>
                 <div class="col-lg-7 col-md-12 mt-3">
                     <h3>I use cutting edge technology</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio explicabo odit odio mollitia, nam
-                        rerum distinctio. Et ipsam repudiandae ad tenetur cumque non praesentium! Sed molestias ex fugit
-                        debitis esse. </p>
+                    <p>Technology not only produces exciting outcomes that will help grow business rapidly, but it also simplifies the process by saving a lot of time that could be put to better use. </p>
                     <div class="tech my-4">
                         <i class='bx bxl-html5 display-3 me-2'></i>
                         <i class='bx bxl-css3 display-3 me-2'></i>
@@ -119,7 +114,7 @@
                         <i class='bx bxl-bootstrap display-3 me-2'></i>
                         <i class='bx bxl-javascript display-3 me-2'></i>
                         <i class='bx bxl-php display-3 me-2'></i>
-                        <i class="fab fa-laravel display-3 me-2"></i>
+                        <i class='bx bxl-tailwind-css display-3'></i>
                     </div>
                 </div>
             </div>
@@ -135,7 +130,7 @@
 
                             <div class="card-content">
                                 <a href="#!">
-                                    <h5>Title</h5>
+                                    <h5>Roseate</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptates
                                         minima perferendis, tempore ab ut.</p>
                                 </a>
@@ -149,7 +144,7 @@
 
                             <div class="card-content">
                                 <a href="#!">
-                                    <h5>Title</h5>
+                                    <h5>Calm Rosa</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptates
                                         minima perferendis, tempore ab ut.</p>
                                 </a>
@@ -163,7 +158,7 @@
 
                             <div class="card-content">
                                 <a href="#!">
-                                    <h5>Title</h5>
+                                    <h5>Rojillo</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptates
                                         minima perferendis, tempore ab ut.</p>
                                 </a>
@@ -177,7 +172,7 @@
 
                             <div class="card-content">
                                 <a href="#!">
-                                    <h5>Title</h5>
+                                    <h5>Herir Levemente</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptates
                                         minima perferendis, tempore ab ut.</p>
                                 </a>
@@ -191,21 +186,7 @@
 
                             <div class="card-content">
                                 <a href="#!">
-                                    <h5>Title</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptates
-                                        minima perferendis, tempore ab ut.</p>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="card item border-0">
-                            <div class="card-img"
-                                style="background-image:url(https://thumbs.dreamstime.com/b/retro-alarm-clock-pink-retro-alarm-clock-pink-d-rendering-158149534.jpg);">
-                            </div>
-
-                            <div class="card-content">
-                                <a href="#!">
-                                    <h5>Title</h5>
+                                    <h5>Sakura Warrior</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptates
                                         minima perferendis, tempore ab ut.</p>
                                 </a>
